fix dropdown colors in dark mode on chrome

--- a/css/dark.css
+++ b/css/dark.css
@@ -85,3 +85,7 @@
 .dark-only {
   display: initial;
 }
+
+.dark-theme select option {
+    background: #202020;
+}
